update sourceCompatibility to 17